[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "bkash-pgw-tokenized"
version = "0.1.0"
description = "Async client for bKash Tokenized Checkout (grant/refresh, create/execute, status, search, refund) and SNS IPN verification."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "bKash boilerplate contributors" }]
keywords = ["bkash", "payment", "pgw", "tokenized", "bangladesh"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27",
  "cryptography>=42.0.0",
]

[project.optional-dependencies]
# Backward compatible no-op: IPN/SNS support uses cryptography, which is a core dependency now.
ipn = []
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[project.urls]
Documentation = "https://developer.bka.sh/"

[tool.hatch.build.targets.wheel]
packages = ["bkash_pgw_tokenized"]

[tool.hatch.build.targets.sdist]
include = ["bkash_pgw_tokenized", "README.md", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
